[tool.poetry]
name = "cyclegandemo"
version = "0.1.0"
description = ""
authors = ["Maksim <123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
torchvision = "^0.13.0"
pyTelegramBotAPI = "^4.6.0"
opencv-python = "^4.6.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
